# chronicle

./: .eslintrc.js  .gitignore  .prettierrc  LICENSE-Apache-2.0  README.md  index.html  justfile  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  test.md  tsconfig.json  tsconfig.node.json  vite.config.ts
.storybook/: main.ts
src/: App.tsx  main.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: sql.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  events.rs  indexer.rs  lib.rs  main.rs  migrations.rs  util.rs
src-tauri/src/events/: ical.rs
src/components/: CalAndTasks.tsx  Calendar.tsx  Layout.tsx  TaskList.tsx
src/features/calendar/: index.ts
src/features/calendar/components/: CalAndTasks.tsx  Calendar.tsx  EventInfo.tsx  NewEventForm.tsx  TimeBlocker.tsx
src/features/calendar/styles/: Calendar.css
src/features/calendar/utils/: scheduling.ts
src/features/category-list/: index.ts
src/features/category-list/components/: CategoryItem.tsx  CategoryList.tsx
src/features/category-list/stores/: CategoryContext.tsx
src/features/category-list/types/: schema.ts
src/features/category-list/utils/: db.ts
src/features/database-connection/: index.ts
src/features/database-connection/stores/: DatabaseContext.tsx
src/features/event-storage/: index.ts
src/features/tasks/: index.ts
src/stores/: CategoryContext.tsx  DatabaseContext.ts  DatabaseContext.tsx
src/stories/: Header.tsx  Page.tsx
src/styles/: output.css
src/utils/: ideal_week.ts  index.ts
temp/: index.html
(+7 files in other folders)
