[package]
name = "vectors-chronicle"
version = "0.1.0"
description = "A calendar app."
authors = ["Victor Hornet"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vectors_chronicle_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde_json = "1.0"
serde = { version = "1.0.196", features = ["serde_derive"] }
chrono = "0.4.34"
color-eyre = "0.6.2"
derive_builder = "0.20.0"
thiserror = "1.0.57"
toml = "0.8.10"

# optimize dependencies for debug builds
[profile.dev.package."*"]
opt-level = 2


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
